[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk="1.9.13"
solana-client="1.9.15"
anchor-lang = "0.24.2"
anchor-client="0.24.2"
rand = "0.7.3"
chrono="0.4.19"
solana-voting="0.1.0"